<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/kvizovi"
        android:icon="@android:drawable/ic_menu_today"
        android:title="Kvizovi" />
    <item
        android:id="@+id/predmeti"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Predmeti" />
    <item
        android:id="@+id/predajKviz"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="Predaj" />
    <item
        android:id="@+id/zaustaviKviz"
        android:icon="@android:drawable/ic_media_pause"
        android:title="Zaustavi" />

</menu>
