...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/odabirGodina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#5D2FAF"
        android:foregroundTint="#C1AEE3"
        app:layout_constraintBottom_toTopOf="@+id/odabirPredmet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/odabirPredmet"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#5D2FAF"
        android:foregroundTint="#C1AEE3"
        app:layout_constraintBottom_toTopOf="@+id/odabirGrupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGodina" />

    <Spinner
        android:id="@+id/odabirGrupa"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#5D2FAF"
        android:foregroundTint="#C1AEE3"
        app:layout_constraintBottom_toTopOf="@+id/dodajPredmetDugme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirPredmet" />

    <Button
        android:id="@+id/dodajPredmetDugme"
...
